Flex and teal added with div

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Beginner Tailwind Site</title>
   </head>
-  <body class="bg-light-blue-400 min-h-screen">
-    <h3 class="text-3xl text-red-800">Hi There</h3>
+  <body>
+    <div class="bg-teal-500 min-h-screen flex justify-center items-center">
+      <h3 class="text-4xl text-teal-100">Hi There</h3>
+    </div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
