--- a/index.html
+++ b/index.html
@@ -7,9 +7,262 @@
     <title>Beginner Tailwind Site</title>
   </head>
   <body>
-    <div class="bg-teal-500 min-h-screen flex justify-center items-center">
-      <h3 class="text-4xl text-teal-100">Hi There</h3>
+    <div class="bg-gradient-to-br from-white to-gray-300">
+      <!-- ====================================================== -->
+      <!-- =============== header/navigation ====================================================== -->
+      <!-- ====================================================== -->
+      <!-- left circle decoration -->
+      <div class="absolute top-0 left-0">
+        <div
+          class="
+            absolute
+            bg-gradient-to-br
+            from-teal-100
+            to-teal-200
+            w-64
+            h-64
+            rounded-full
+          "
+        ></div>
+        <div
+          class="
+            absolute
+            ml-10
+            mt-10
+            bg-gradient-to-br
+            from-purple-100
+            to-purple-200
+            w-64
+            h-64
+            rounded-full
+          "
+        ></div>
+        <div
+          class="
+            absolute
+            ml-24
+            bg-gradient-to-br
+            from-red-100
+            to-red-200
+            w-64
+            h-64
+            rounded-full
+          "
+        ></div>
+      </div>
+      <!-- right circle decoration -->
+      <div
+        class="
+          hidden
+          lg:block
+          absolute
+          top-0
+          right-0
+          mr-32
+          transform
+          -translate-x-64
+          translate-y-64
+        "
+      >
+        <div
+          class="
+            absolute
+            bg-gradient-to-br
+            from from-teal-100
+            to-teal-200
+            w-64
+            h-64
+            rounded-full
+          "
+        ></div>
+        <div
+          class="
+            absolute
+            ml-10
+            mt-10
+            bg-gradient-to-br
+            from from-purple-100
+            to-purple-200
+            w-64
+            h-64
+            rounded-full
+          "
+        ></div>
+        <div
+          class="
+            absolute
+            ml-24
+            mt-30
+            bg-gradient-to-br
+            from from-red-100
+            to-red-200
+            w-64
+            h-64
+            rounded-full
+          "
+        ></div>
+      </div>
+      <!-- navigation -->
+      <div class="relative text-gray-600">
+        <div class="container mx-auto flex justify-between px-6 lg:px-0 py-6">
+          <!-- left header section -->
+          <div class="space-x-2 flex items-center">
+            <a href="#" class="text-2xl text-teal-800 font-bold"
+              >Beginner Tailwind</a
+            >
+            <a href="#" class="hidden md:inline-block hover:text-gray-900"
+              >About</a
+            >
+            <a href="#" class="hidden md:inline-block hover:text-gray-900"
+              >What You'll Learn</a
+            >
+            <a href="#" class="hidden md:inline-block hover:text-gray-900"
+              >Pricing</a
+            >
+            <a href="#" class="hidden md:inline-block hover:text-gray-900"
+              >FAQ</a
+            >
+          </div>
+
+          <!-- right header section -->
+          <div class="space-x-4 flex items-center">
+            <a href="#" class="hover:text-gray-900">Login</a>
+            <a
+              href="#"
+              class="
+                hidden
+                md:inline-block
+                p-3
+                bg-purple-300
+                hover:bg-purple-200
+                text-purple-700
+                hover:text-purple-600
+                rounded
+                shadow
+                hover:shadow-xl
+                transition
+                duration-500
+              "
+              >Get the Course</a
+            >
+          </div>
+        </div>
+      </div>
+      <!-- ====================================================== -->
+      <!-- =============== hero ====================================================== -->
+      <!-- ====================================================== -->
+      <div class="relative">
+        <div class="container mx-auto px-6 lg:px-0 text-center py-24">
+          <!-- heading -->
+          <h1 class="mb-4 text-5xl lg:text-6xl font-extrabold">
+            <span
+              class="
+                text-transparent
+                bg-clip-text bg-gradient-to-r
+                from-teal-400
+                to-teal-500
+              "
+              >Beginner</span
+            ><span
+              class="
+                text-transparent
+                bg-clip-text bg-gradient-to-r
+                from-teal-500
+                via-purple-600
+                to-purple-500
+              "
+              >Tailwind</span
+            >
+          </h1>
+          <!-- paragraph -->
+          <p class="mb-8 text-lg lg:text-2xl text-gray-700">
+            Make good looking designs quickly. All without a single line of
+            custom CSS.
+          </p>
+          <!-- big button/ call to action -->
+          <a
+            href="#"
+            class="
+              inline-block
+              mb-16
+              lg:mb-32
+              py-4
+              px-12
+              rounded
+              bg-gradient-to-br
+              from-purple-500
+              to-purple-700
+              hover:to-purple-600
+              text-purple-100
+              hover:text-white
+              shadow-lg
+              hover:shadow-2xl
+              transition
+              duration-500
+              font-bold
+              text-lg
+              tracking-wide
+            "
+            >Get the Course</a
+          >
+          <div class="relative">
+            <!-- teaser image -->
+            <img
+              src="https://i.imgur.com/wysbBMS.png"
+              alt="Teaser image"
+              class="rounded-lg shadow-2xl border-4 border-purple-400"
+            />
+            <!-- teaser image info box -->
+            <div
+              class="
+                lg:absolute
+                right-0
+                top-0
+                lg:transform lg:translate-x-4 lg:-translate-y-5
+                bg-yellow-100
+                text-left
+                py-4
+                px-8
+                mt-8
+                lg:mt-0
+                rounded
+                shadow-lg
+                text-yellow-800
+                border-t-4 border-yellow-500
+              "
+            >
+              <p>
+                <strong class="font-bold"
+                  >We'll create beginnertailwind.com</strong
+                ><span class="opacity-50">(it's the site you're on now!)</span>
+              </p>
+              <p>We'll do it without a single line of custom CSS!</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
+    <!-- ====================================================== -->
+    <!-- =============== overview ====================================================== -->
+    <!-- ====================================================== -->
+    <!-- ====================================================== -->
+    <!-- =============== about me ====================================================== -->
+    <!-- ====================================================== -->
+    <!-- ====================================================== -->
+    <!-- =============== what you'll learn ====================================================== -->
+    <!-- ====================================================== -->
+    <!-- ====================================================== -->
+    <!-- =============== what we'll build ====================================================== -->
+    <!-- ====================================================== -->
+    <!-- ====================================================== -->
+    <!-- =============== pricing ====================================================== -->
+    <!-- ====================================================== -->
+    <!-- ====================================================== -->
+    <!-- =============== faq ====================================================== -->
+    <!-- ====================================================== -->
+    <!-- ====================================================== -->
+    <!-- =============== footer/newsletter ====================================================== -->
+    <!-- ====================================================== -->
     <script type="module" src="/main.js"></script>
   </body>
 </html>
